--- a/Jaeger/Jaeger.vcxproj.filters
+++ b/Jaeger/Jaeger.vcxproj.filters
@@ -1,42 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Quelldateien">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Headerdateien">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Ressourcendateien">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Jaeger">
+      <UniqueIdentifier>{133291BB-FFD3-BB91-E88E-CFE5D4CF42E2}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Jaeger\Core.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
+    <ClInclude Include="src\Jaeger.h" />
     <ClInclude Include="src\Jaeger\Application.h">
-      <Filter>Headerdateien</Filter>
+      <Filter>Jaeger</Filter>
     </ClInclude>
-    <ClInclude Include="src\Jaeger.h">
-      <Filter>Headerdateien</Filter>
+    <ClInclude Include="src\Jaeger\Core.h">
+      <Filter>Jaeger</Filter>
     </ClInclude>
     <ClInclude Include="src\Jaeger\EntryPoint.h">
-      <Filter>Headerdateien</Filter>
+      <Filter>Jaeger</Filter>
     </ClInclude>
     <ClInclude Include="src\Jaeger\Log.h">
-      <Filter>Headerdateien</Filter>
+      <Filter>Jaeger</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Jaeger\Application.cpp">
-      <Filter>Quelldateien</Filter>
+      <Filter>Jaeger</Filter>
     </ClCompile>
     <ClCompile Include="src\Jaeger\Log.cpp">
-      <Filter>Quelldateien</Filter>
+      <Filter>Jaeger</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
