--- a/Jaeger/Jaeger.vcxproj.filters
+++ b/Jaeger/Jaeger.vcxproj.filters
@@ -34,6 +34,7 @@
     <ClInclude Include="src\Jaeger\Log.h">
       <Filter>Jaeger</Filter>
     </ClInclude>
+    <ClInclude Include="src\jgpch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Jaeger\Application.cpp">
@@ -42,5 +43,6 @@
     <ClCompile Include="src\Jaeger\Log.cpp">
       <Filter>Jaeger</Filter>
     </ClCompile>
+    <ClCompile Include="src\jgpch.cpp" />
   </ItemGroup>
 </Project>
