--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Jaeger/vendor/spdlog"]
 	path = Jaeger/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Jaeger/vendor/GLFW"]
+	path = Jaeger/vendor/GLFW
+	url = https://github.com/TheCherno/glfw.git
