--- a/Jaeger/Jaeger.vcxproj.filters
+++ b/Jaeger/Jaeger.vcxproj.filters
@@ -7,8 +7,14 @@
     <Filter Include="Jaeger\Events">
       <UniqueIdentifier>{976A5D1E-032B-D954-CC65-22D238E51D31}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Jaeger\ImGui">
+      <UniqueIdentifier>{7DA9C96D-690C-5912-1292-91C8FED32495}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Platform">
       <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\OpenGL">
+      <UniqueIdentifier>{1E7D2C1D-8A08-9AE1-9319-1DD6FF23F6E1}</UniqueIdentifier>
     </Filter>
     <Filter Include="Platform\Windows">
       <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
@@ -37,6 +43,9 @@
     <ClInclude Include="src\Jaeger\Events\MouseEvent.h">
       <Filter>Jaeger\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\Jaeger\ImGui\ImGuiLayer.h">
+      <Filter>Jaeger\ImGui</Filter>
+    </ClInclude>
     <ClInclude Include="src\Jaeger\Layer.h">
       <Filter>Jaeger</Filter>
     </ClInclude>
@@ -49,6 +58,9 @@
     <ClInclude Include="src\Jaeger\Window.h">
       <Filter>Jaeger</Filter>
     </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h">
+      <Filter>Platform\OpenGL</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
       <Filter>Platform\Windows</Filter>
     </ClInclude>
@@ -58,6 +70,9 @@
     <ClCompile Include="src\Jaeger\Application.cpp">
       <Filter>Jaeger</Filter>
     </ClCompile>
+    <ClCompile Include="src\Jaeger\ImGui\ImGuiLayer.cpp">
+      <Filter>Jaeger\ImGui</Filter>
+    </ClCompile>
     <ClCompile Include="src\Jaeger\Layer.cpp">
       <Filter>Jaeger</Filter>
     </ClCompile>
@@ -66,6 +81,9 @@
     </ClCompile>
     <ClCompile Include="src\Jaeger\Log.cpp">
       <Filter>Jaeger</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
+      <Filter>Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
       <Filter>Platform\Windows</Filter>
